--- a/winter.html
+++ b/winter.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>Зимовий відпочинок</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JSFMDBX72"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8JSFMDBX72');
+    </script>
 </head>
 <body>
 
@@ -51,3 +60,4 @@
 
 </body>
 </html>
+
