--- a/main.html
+++ b/main.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>Відпочинок</title>
     <link rel="stylesheet" href="css/style2.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JSFMDBX72"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8JSFMDBX72');
+    </script>
 </head>
 <body>
 
@@ -49,3 +58,4 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
