--- a/thermal.html
+++ b/thermal.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>Термальні джерела</title>
     <link rel="stylesheet" href="css/style.css">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JSFMDBX72"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8JSFMDBX72');
+    </script>
 </head>
 <body>
 
@@ -46,3 +54,4 @@
 
 </body>
 </html>
+
