--- a/thermal.html
+++ b/thermal.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <title>Термальні джерела</title>
     <link rel="stylesheet" href="css/style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8JSFMDBX72"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8JSFMDBX72');
+    </script>
 </head>
+    
 <body>
 
     <button class="back" onclick="window.close()">← На головну</button>
@@ -46,5 +55,6 @@
 
 </body>
 </html>
+
 
 
