--- a/winter.html
+++ b/winter.html
@@ -26,7 +26,7 @@
         <img src="img/bukovel.jpg" class="card-img" alt="Буковель">
     </a>
 
-    <a href="https://www.drago-brat.com/" class="card" target="_blank" onclick="goToSite('dragobrat')">
+    <a href="https://www.drago-brat.com/" class="card" target="_blank" onclick="goToSite('dragobrat1')">
         <h2 class="card-title">Драгобрат</h2>
         <p class="card-desc">Драгобрат – це найвищий гірськолижний курорт України, розташований на висоті 1300-1700 метрів над рівнем моря в самому серці Карпат</p>
         <img src="https://vidviday.ua/storage/media/place/18598/untitled-design-2024-10-31t162730276.jpg" class="card-img" alt="Драгобрат">
@@ -60,5 +60,6 @@
 
 </body>
 </html>
+
 
 
