--- a/winter.html
+++ b/winter.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <button class="back" onclick="window.location.href='main.html'">На головну</button>
+    <button class="back" onclick="window.location.href='main.html'">!!!На головну</button>
 
     <h2>Зимовий відпочинок</h2>
 
@@ -60,6 +60,7 @@
 
 </body>
 </html>
+
 
 
 
