--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="most-popular-footer" onclick="goToSite(currentPopularSite)">
-        <div class="popular-title">Найпопулярніший сайт за версією наших користувачів</div>
+        <div class="popular-title">Найпопулярніший сайт (за версією ваших переглядів)</div>
 
         <div class="popular-content">
             <div class="popular-info">
@@ -58,6 +58,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
