--- a/thermal.html
+++ b/thermal.html
@@ -16,7 +16,7 @@
     
 <body>
 
-    <button class="back" onclick="window.close()">← На головну</button>
+    <button class="back" onclick="window.location.href='main.html'">На головну</button>
 
     <h2>Термальні джерела</h2>
 
@@ -55,6 +55,7 @@
 
 </body>
 </html>
+
 
 
 
