--- a/sea.html
+++ b/sea.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <button class="back" onclick="window.close()">← На головну</button>
+    <button class="back" onclick="window.location.href='main.html'">На головну</button>
 
     <h2>Море</h2>
 
@@ -21,3 +21,4 @@
 
 </body>
 </html>
+
