--- a/sea.html
+++ b/sea.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Море</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
 
@@ -21,4 +21,5 @@
 
 </body>
 </html>
+
 
