--- a/thermal.html
+++ b/thermal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Термальні джерела</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
     
 <body>
@@ -47,6 +47,7 @@
 
 </body>
 </html>
+
 
 
 
