--- a/winter.html
+++ b/winter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Зимовий відпочинок</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
 
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
