--- a/winter.html
+++ b/winter.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 
-    <button class="back" onclick="window.location.href='main.html'">На головну</button>
-
-    <h2>Зимовий відпочинок</h2>
+    <div class="top">
+        <button class="back" onclick="window.location.href='main.html'">На головну</button>
+        <h2>Зимовий відпочинок</h2>
+    </div>
 
     <a href="https://bukovel.com/" class="card" target="_blank" onclick="event.preventDefault(); goToSite('bukovel')">
         <h2 class="card-title">Буковель</h2>
@@ -51,6 +52,7 @@
 
 </body>
 </html>
+
 
 
 
