--- a/winter.html
+++ b/winter.html
@@ -9,7 +9,7 @@
 
     <button class="back" onclick="window.location.href='main.html'">На головну</button>
 
-    <h2>Зимовий відпочинок</h2>
+    <h2>!Зимовий відпочинок</h2>
 
     <a href="https://bukovel.com/" class="card" target="_blank" onclick="event.preventDefault(); goToSite('bukovel')">
         <h2 class="card-title">Буковель</h2>
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
