--- a/sea.html
+++ b/sea.html
@@ -11,13 +11,13 @@
 
     <h2>Море</h2>
 
-    <a href="https://odessa.nemohotels.com/" class="card" target="_blank">
+    <a href="https://odessa.nemohotels.com/" class="card" target="_blank" onclick="event.preventDefault(); goToSite('nemo')">
         <h2 class="card-title">Одеса Nemo</h2>
         <p class="card-desc">Елітний курорт уздовж Чорного моря розташований за 3 хвилини пішки від пляжу "Ланжерон"...</p>
-        <img src="https://more.ks.ua/Media/pic/logo.jpg" class="card-img" alt="more.ks.ua">
-    </a>
+        <img src="img/nemo.jpg" class="card-img" alt="Nemo">
+    </a>    
     
-    <a href="https://more.ks.ua/pansionat/kurort/82" class="card" target="_blank">
+    <a href="https://more.ks.ua/pansionat/kurort/82" class="card" target="_blank" onclick="event.preventDefault(); goToSite('more.ks.ua')">
         <h2 class="card-title">more.ks.ua</h2>
         <p class="card-desc">More.ks.ua — ваш надійний гід для ідеального відпочинку...</p>
         <img src="https://more.ks.ua/Media/pic/logo.jpg" class="card-img" alt="more.ks.ua">
@@ -27,6 +27,7 @@
 
 </body>
 </html>
+
 
 
 
