--- a/sea.html
+++ b/sea.html
@@ -14,7 +14,7 @@
     <a href="https://odessa.nemohotels.com/" class="card" target="_blank" onclick="event.preventDefault(); goToSite('nemo')">
         <h2 class="card-title">Одеса Nemo</h2>
         <p class="card-desc">Елітний курорт уздовж Чорного моря розташований за 3 хвилини пішки від пляжу "Ланжерон"...</p>
-        <img src="img/nemo.jpg" class="card-img" alt="Nemo">
+        <img src="img/Nemo.jpg" class="card-img" alt="Nemo">
     </a>    
     
     <a href="https://more.ks.ua/pansionat/kurort/82" class="card" target="_blank" onclick="event.preventDefault(); goToSite('more.ks.ua')">
@@ -27,6 +27,7 @@
 
 </body>
 </html>
+
 
 
 
