--- a/thermal.html
+++ b/thermal.html
@@ -1,6 +1,16 @@
 ﻿<!DOCTYPE html>
 <html lang="uk">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQMZ0Z3MM5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-JQMZ0Z3MM5');
+    </script>
+    
     <meta charset="UTF-8">
     <title>Термальні джерела</title>
     <link rel="stylesheet" href="css/style2.css">
@@ -47,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
