--- a/sea.html
+++ b/sea.html
@@ -21,7 +21,7 @@
 
     <h2>Море</h2>
 
-    <a href="https://odessa.nemohotels.com/" class="card" target="_blank" onclick="event.preventDefault(); goToSite('nemo')">
+    <a href="https://odessa.nemohotels.com/" class="card" target="_blank" onclick="goToSite('nemo')">
         <h2 class="card-title">Одеса Nemo</h2>
         <p class="card-desc">Елітний курорт уздовж Чорного моря розташований за 3 хвилини пішки від пляжу "Ланжерон"...</p>
         <img src="img/Nemo.jpg" class="card-img" alt="Nemo">
@@ -37,6 +37,7 @@
 
 </body>
 </html>
+
 
 
 
