--- a/sea.html
+++ b/sea.html
@@ -27,7 +27,7 @@
         <img src="img/Nemo.jpg" class="card-img" alt="Nemo">
     </a>    
     
-    <a href="https://more.ks.ua/pansionat/kurort/82" class="card" target="_blank" onclick="event.preventDefault(); goToSite('more.ks.ua')">
+    <a href="https://more.ks.ua/pansionat/kurort/82" class="card" target="_blank" onclick="goToSite('moreKs')">
         <h2 class="card-title">more.ks.ua</h2>
         <p class="card-desc">More.ks.ua — ваш надійний гід для ідеального відпочинку...</p>
         <img src="https://more.ks.ua/Media/pic/logo.jpg" class="card-img" alt="more.ks.ua">
@@ -37,6 +37,7 @@
 
 </body>
 </html>
+
 
 
 
