--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 
     </div>
 
-    <div class="most-popular-footer" onclick="goToSite(currentPopularSite)">
+    <div class="most-popular-footer" onclick="goToSite(currentPopularSite, true)">
         <div class="popular-title">Найпопулярніший сайт (за версією ваших переглядів)</div>
 
         <div class="popular-content">
@@ -49,6 +49,7 @@
     <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
